# HH_Vacancy_etl_airflow

./: .env.example  .flake8  .gitignore  README.md  config.py  database.ini  docker-compose.yaml  habr_page_debug.html  main.py  pyproject.toml  requirements.txt  run_etl.py
dags/: habr_career_etl.py
src/: logging_config.py
src/api/: base_api_source.py  hc_api_service.py  hc_api_source.py  hc_html_source.py  hc_json_source.py  hh_api_service.py  hh_api_source.py  tv_api_service.py  tv_api_source.py
src/database/: db_base_connector.py  hc_db.py  hc_db_manager.py  hc_db_service.py  hc_db_writer.py  hh_db.py  hh_db_manager.py  hh_db_service.py  tv_db.py  tv_db_manager.py  tv_db_service.py
src/models/: employer.py  vacancy.py
src/notifications/: telegram_notifier.py
src/services/: hc_coordinator.py  hh_coordinator.py  tv_coordinator.py
